Fixed scroll stop issue. Added testing for covering entire viewport when on mobile

--- a/portfolio.css
+++ b/portfolio.css
@@ -10,10 +10,11 @@ html, body {
     max-width: 100%;
     overscroll-behavior: none;
     overflow-x: hidden;
+    overflow-y: auto;
 }
 
 #main {
-    overflow: auto;
+    overflow: hidden;
     padding-bottom: 100px;
 }
 #footer {
@@ -38,6 +39,7 @@ html, body {
     min-height: 8vh;
     flex-direction: row;
     flex-wrap: wrap;
+    color: white;
     background-color: black;
     width: 100%;
     height: 70px;
@@ -49,7 +51,7 @@ html, body {
     justify-content: space-around;
     width: 60%;
     list-style: none;
-    margin-right: 15%;
+    margin-right: 18%;
 }
 .burger {
     display: none;
@@ -66,7 +68,7 @@ html, body {
 }
 a {
     margin: 30px;
-    color:black;
+    color:white;
     text-decoration: none !important;
     text-transform: uppercase;
 }
@@ -191,6 +193,7 @@ section .container {
     padding: 16px;
     max-width: 1024px;
     margin-inline: auto;
+    
 }
 .container .set {
     background: #010101;
